--- a/Inventory-service/pom.xml
+++ b/Inventory-service/pom.xml
@@ -40,6 +40,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${parent.version}</version>
 				<configuration>
 					<classifier>exec</classifier>
 				</configuration>
