--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   kafka:
     image: bashj79/kafka-kraft
@@ -6,15 +7,12 @@ services:
       - "9092:9092"
     volumes:
       - kafka_data:/opt/kafka/kafka-logs
+
   mongodb:
-    container_name: filter-db-dev
+    container_name: turkcell-filterdb
     image: mongo
-    restart: always
     ports:
       - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: "turkcell"
-      MONGO_INITDB_ROOT_PASSWORD: "12345"
     volumes:
       - mongodb_data:/data/db
 
