--- a/filter-service/pom.xml
+++ b/filter-service/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>common-package</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.turkcell</groupId>
+			<artifactId>common-package</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -33,7 +38,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${parent.version}</version>
 			</plugin>
 		</plugins>
 	</build>
