Added rentalservice client fallback

--- a/rental-service/src/main/resources/application.yml
+++ b/rental-service/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: rental-service
   datasource:
+    username: postgres
     password: postgres
     url: jdbc:postgresql://localhost:5432/t1-rental-service
-    username: postgres
   jpa:
     properties:
       hibernate:
@@ -16,6 +16,10 @@ spring:
       bootstrap-servers: http://localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+  cloud:
+    openfeign:
+      circuitbreaker:
+        enabled: true
 eureka:
   client:
     fetch-registry: true
@@ -23,8 +27,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
   instance:
-    instance-id: ${spring.application.name}:${instanceId:${random.value}}
+    instance-id: ${spring.application.name}:${random.value}
     prefer-ip-address: true
 server:
   port: 0
-
