--- a/rental-service/src/main/resources/application.yml
+++ b/rental-service/src/main/resources/application.yml
@@ -31,3 +31,9 @@ eureka:
     prefer-ip-address: true
 server:
   port: 0
+resilience4j:
+  retry:
+    instances:
+      retry-rental-client:
+        max-attempts: 5
+        waitDuration: 10s
