--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,17 @@ services:
     volumes:
       - mongodb_data:/data/db
 
+  mysqldb:
+    image: mysql:latest
+    container_name: t1-maintenancedb
+    environment:
+      MYSQL_ROOT_PASSWORD: mysql
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysqldb_data:/data/db
+
 volumes:
   kafka_data:
   mongodb_data:
+  mysqldb_data:
