--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,26 @@ services:
     volumes:
       - mysqldb_data:/data/db
 
+  elasticsearch:
+    image: elasticsearch:8.6.0
+    container_name: elasticsearch
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    cap_add:
+      - IPC_LOCK
+    ports:
+      - 9200:9200
+      - 9300:9300
 volumes:
   kafka_data:
   mongodb_data:
   mysqldb_data:
+
